--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel=stylesheet href="index.css">
     <title>Country Currency Convertor</title>
   </head>
-  <body style="background-color: rgb(225,225,225)">
+  <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
